# VideoTranscriber

./: .gitignore  Dockerfile  README.md  WEBSOCKET_NOTIFICATIONS_SETUP.md  docker-compose.yml  pyproject.toml
video_transcriber/: db.sqlite3
video_transcriber/accounts/: urls.py
video_transcriber/core/: consumers.py  models.py  routing.py  tasks.py  urls.py  utils.py  views.py
video_transcriber/core/migrations/: 0004_alter_output_file.py  0005_upload_status.py
video_transcriber/processing/: audio.py  summarization.py  thumbnail.py  transcription.py
video_transcriber/templates/: base.html
video_transcriber/templates/accounts/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
video_transcriber/templates/core/: dashboard.html  releted_files.html
video_transcriber/video_transcriber/: asgi.py  settings.py  urls.py
